Minor code/comment cleanup